syntax = "proto3";

package stats.message;

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int64 max_results = 2;
}